[gd_scene load_steps=10 format=3 uid="uid://dxa4b1piqkc7i"]

[ext_resource type="Script" uid="uid://d3jpya6xyhtsw" path="res://Scripts/BaseEnemy.gd" id="1_qu00n"]
[ext_resource type="Script" uid="uid://beexf6tvvofb5" path="res://Scripts/StatusEffects/StatusEffectComponent.gd" id="2_6epgf"]
[ext_resource type="Script" uid="uid://pvu78uycb4rf" path="res://Scripts/Enemies/HitAndRunBehavior.gd" id="3_7iixi"]
[ext_resource type="Script" uid="uid://bb4gofnd2upq4" path="res://Scripts/Enemies/JuggernautBehavior.gd" id="4_vogiu"]
[ext_resource type="Script" uid="uid://bwu2r4br4y50x" path="res://Scripts/Enemies/OnDeathBehaviorHandler.gd" id="5_w7a7f"]
[ext_resource type="Script" uid="uid://dy4gmkitsh3rm" path="res://Scripts/Enemies/WaveMovementBehavior.gd" id="6_mq0h7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_qu00n"]
animations = [{
"frames": [],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"idle",
"speed": 5.0
}, {
"frames": [],
"loop": false,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qu00n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6epgf"]
bg_color = Color(0.855745, 0.0366383, 0.247622, 1)

[node name="BaseEnemy" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 8
collision_mask = 128
script = ExtResource("1_qu00n")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qu00n")
animation = &"death"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="DamageArea" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]

[node name="ContactDamageTimer" type="Timer" parent="."]
one_shot = true

[node name="HealthBar" type="ProgressBar" parent="."]
visible = false
offset_left = -36.0
offset_top = -40.0
offset_right = 37.0
offset_bottom = -23.0
theme_override_styles/background = SubResource("StyleBoxFlat_qu00n")
theme_override_styles/fill = SubResource("StyleBoxFlat_6epgf")
show_percentage = false

[node name="SlowEffectTimer" type="Timer" parent="."]
one_shot = true

[node name="KnockbackRecoveryTimer" type="Timer" parent="."]
one_shot = true

[node name="StatusEffectComponent" type="Node" parent="."]
script = ExtResource("2_6epgf")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="HitAndRunBehavior" type="Node" parent="."]
script = ExtResource("3_7iixi")

[node name="JuggernautBehavior" type="Node" parent="."]
script = ExtResource("4_vogiu")

[node name="EliteMarkersContainer" type="Node2D" parent="."]

[node name="OnDeathBehaviorHandler" type="Node" parent="."]
script = ExtResource("5_w7a7f")

[node name="WaveMovementBehavior" type="Node" parent="."]
script = ExtResource("6_mq0h7")

[connection signal="timeout" from="SlowEffectTimer" to="." method="_on_slow_effect_timer_timeout"]
